2006-04-02 Moved PBox class to transforms and deleted pbox.py;
           made pylab axis command a thin wrapper for Axes.axis;
           more tweaks to aspect-ratio handling; fixed Axes.specgram
           to account for the new imshow default of unit aspect
           ratio; made contour set the Axes.dataLim. - EF

2006-03-31 Fixed the Qt "Underlying C/C++ object deleted" bug. - JRE

2006-03-31 Applied Vasily Sulatskov's Qt Navigation Toolbar enhancement. - JRE

2006-03-31 Ported Norbert's rewriting of Halldor's stineman_interp
           algorithm to make it numerix compatible and added code to
           matplotlib.mlab.  See examples/interp_demo.py - JDH

2006-03-30 Fixed a bug in aspect ratio handling; blocked potential
           crashes when panning with button 3; added axis('image')
           support. - EF

2006-03-28 More changes to aspect ratio handling; new PBox class
           in new file pbox.py to facilitate resizing and repositioning
           axes; made PolarAxes maintain unit aspect ratio. - EF

2006-03-23 Refactored TextWithDash class to inherit from, rather than
           delegate to, the Text class. Improves object inspection
           and closes bug # 1357969 - DSD

2006-03-22 Improved aspect ratio handling, including pylab interface.
           Interactive resizing, pan, zoom of images and plots
           (including panels with a shared axis) should work.
           Additions and possible refactoring are still likely. - EF

2006-03-21 Added another colorbrewer colormap (RdYlBu) - JSWHIT

2006-03-21 Fixed tickmarks for logscale plots over very large ranges.
           Closes bug # 1232920 - DSD

2006-03-21 Added Rob Knight's arrow code; see examples/arrow_demo.py - JDH

2006-03-20 Added support for masking values with nan's, using ADS's
           isnan module and the new API. Works for *Agg backends - DSD

2006-03-20 Added contour.negative_linestyle rcParam - ADS

2006-03-20 Added _isnan extension module to test for nan with Numeric